Found even px height and widths for 16x16 gird

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,20 @@
 #container {
+    
     border: solid black;
+    display: flex;
+    flex-wrap: wrap;
+    height: 256.5px;
+    width: 256.5px;
+   
+    
 }
 
 #container > div {
     border: solid red;
+    height: 10px;
+    width: 10px;
+    margin: 0px;
+    padding: 0px;
+    
+    
 }
