Deleted some css and added it into js styling. In the process of changing script.js so that the grid is created by user input. Just finished the nested loop that will create such a thing

--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,14 @@
     border: solid black;
     display: flex;
     flex-wrap: wrap;
-    height: 256.5px;
-    width: 256.5px;
+    position: relative;
+    height: 960px;
+    width: 960px;
    
     
 }
 
 #container > div {
     border: solid red;
-    height: 10px;
-    width: 10px;
-    margin: 0px;
-    padding: 0px;
-    
     
 }
